# ComfyUI-JK-TextTools

./: .gitignore  CLAUDE_texttools.md  README.md  __init__.py  bbox_to_mask.py  bbox_to_sam3_query.py  bboxes_to_mask.py  detection_query.py  detection_to_bbox.py  json_pretty_printer.py  json_to_bbox.py  list_index_selector.py  mask_to_bbox.py  pyproject.toml  requirements.txt  segs_to_mask.py  segs_to_sam3_query.py  string_index_selector.py  string_joiner.py  string_splitter.py  string_splitter_list.py  test_detection_query.py  test_json_pretty_printer.py  test_list_index_selector.py  test_string_index_selector.py  test_string_joiner.py  test_string_splitter.py
.github/workflows/: publish.yml
tests/: __init__.py  run_all_tests.py  test_bbox_to_mask.py  test_bbox_to_sam3_query.py  test_detection_query.py  test_detection_to_bbox.py  test_json_pretty_printer.py  test_json_to_bbox.py  test_list_index_selector.py  test_mask_to_bbox.py  test_segs_to_mask.py  test_segs_to_sam3_query.py  test_string_index_selector.py  test_string_joiner.py  test_string_splitter.py
