[project]
name = "jk-texttools"
description = "Text and data manipulation nodes for ComfyUI, with emphasis on JSON processing, detection workflows, and bbox visualization."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# Development dependencies", "black>=23.0.0", "flake8>=6.0.0", "pytest>=7.0.0", "# ComfyUI is assumed to be installed separately"]

[project.urls]
Repository = "https://github.com/Nakamura2828/ComfyUI-JK-TextTools"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Nakamura2828/ComfyUI-JK-TextTools/wiki"
"Bug Tracker" = "https://github.com/Nakamura2828/ComfyUI-JK-TextTools/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-JK-TextTools"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

